--- a/pom.xml
+++ b/pom.xml
@@ -3,48 +3,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>edu.kit.aifb.summa</groupId>
     <artifactId>summa</artifactId>
-    <packaging>war</packaging>
     <version>0.0.1-SNAPSHOT</version>
-    <name>summa Jersey Webapp</name>
+    <name>summa web app</name>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.2.RELEASE</version>
     </parent>
-<build>
-        <finalName>summa</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <inherited>true</inherited>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.glassfish</groupId>
-                <artifactId>maven-glassfish-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.14.1</version>
-            </plugin>
-        </plugins>
-    </build>
     <dependencies>
-    	<dependency>
-    		<groupId>javax.servlet</groupId>
-    		<artifactId>javax.servlet-api</artifactId>
-    		<version>3.0.1</version>
-    		<scope>provided</scope>
-		</dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -52,53 +18,36 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-        	<groupId>com.sun.jersey</groupId>
-        	<artifactId>jersey-bundle</artifactId>
-        	<version>${jersey-version}</version>
-        </dependency>
-        <dependency>
         	<groupId>commons-logging</groupId>
         	<artifactId>commons-logging</artifactId>
         	<version>1.1.1</version>
       	</dependency>
-        <dependency>
-        	<groupId>asm</groupId>
-        	<artifactId>asm</artifactId>
-        	<version>${asm-version}</version>
-        </dependency>
         <dependency>
     		<groupId>org.openrdf.sesame</groupId>
     		<artifactId>sesame-runtime</artifactId>
     		<version>2.8.6</version>
     		<type>jar</type>
   		</dependency>
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-test</artifactId>
-        <scope>test</scope>
-    </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-    <properties>
-        <jersey-version>1.17</jersey-version>
-        <asm-version>3.3.1</asm-version>
-    </properties>
+    <build>
+        <finalName>summa</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
     <repositories>
-        <repository>
-            <id>glassfish.java.net</id>
-            <name>GlassFish Maven Repository</name>
-            <url>http://download.java.net/maven/glassfish</url>
-            <layout>default</layout>
-        </repository>
-        <repository>
-            <id>m2.java.net</id>
-            <name>Java.net Maven 2 Repository</name>
-            <url>http://download.java.net/maven/2</url>
-            <layout>default</layout>
-        </repository>
         <repository>
  			<id>openrdf-sesame</id>
 			<name>OpenRDF Sesame repository</name>
@@ -110,12 +59,6 @@
         </repository>
     </repositories>
     <pluginRepositories>
-        <pluginRepository>
-            <id>m2.java.net</id>
-            <name>Java.net Maven 2 Repository</name>
-            <url>http://download.java.net/maven/2</url>
-            <layout>default</layout>
-        </pluginRepository>
         <pluginRepository>
             <id>spring-releases</id>
             <url>https://repo.spring.io/libs-release</url>
