--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,14 @@
     <version>0.1.0</version>
     <dependencies>
         <dependency>
-            <groupId>eu.wdaqua</groupId>
+            <groupId>org.rdfhdt</groupId>
             <artifactId>hdt-java-core</artifactId>
-            <version>2.0</version>
+            <version>2.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>eu.wdaqua</groupId>
+            <groupId>org.rdfhdt</groupId>
             <artifactId>hdt-jena</artifactId>
-            <version>2.0</version>
+            <version>2.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.beust</groupId>
